# PlotSched

./: .gitignore  CMakeLists.txt  README.md
examples/: EDF.pst  EDFDomino.pst  fixedPriority.pst  fixedPriority_different_cores.pst
examples/bl/0/: README.md  cpus.txt  freqBIG.txt  freqLITTLE.txt  tasks.txt  trace0.pst
src/: PlotSched  PlotSched.pro  customscene.cpp  customscene.h  customtoolbar.cpp  customtoolbar.h  event.cpp  event.h  eventsmanager.cpp  eventsmanager.h  eventsparser.cpp  eventsparser.h  eventview.cpp  eventview.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  moc_predefs.h  plot.cpp  plot.h  plotframe.cpp  plotframe.h  rangeselector.cpp  rangeselector.h  resources.qrc  speedsBig_Odroid_bzip2.txt  speedsLittle_Odroid_bzip2.txt  trace0.pst~  trace0_original.pst  tracefilelister.cpp  tracefilelister.h
src/assets/: speedsBig_Odroid_bzip2.txt  speedsLittle_Odroid_bzip2.txt
